--- a/js3/styles.css
+++ b/js3/styles.css
@@ -1,9 +1,66 @@
+* {
+    font-family: sans-serif;
+}
+
+button {
+    display: block;
+    color: white;
+    background-color: royalblue;
+    padding: .5rem .75rem;
+    border-radius: .25rem;
+    border: none;
+    margin: 20px auto;
+}
+
+button:hover {
+    filter: brightness(92%);
+}
+
 .error {
     display: none;
     color: orangered;
 }
 
+header h1 {
+    font-size: 7vw;
+    text-align: center;
+    font-weight: 100;
+    letter-spacing: .1em;
+}
+
+input[type='text'] {
+    display: block;
+    width: 100%;
+    height: 24px;
+    border-radius: .25rem;
+    background-color: white;
+    border: 1px solid grey;
+}
+
+label {
+    display: inline-block;
+    margin-bottom: .5rem;
+}
+
+main {
+    width: 250px;
+    margin: 0 auto;
+}
+
+#output {
+    border: 1px solid black;
+    border-radius: .25rem;
+    min-height: 200px;
+    width: 100px;
+    margin: 0 auto;
+}
+
 #output p {
     margin: 2px 0;
+    text-align: center;
+}
+
+p {
+    text-align: center;
 }
 
